@@ -1,4 +1,13 @@
+2002-09-25  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* generic/tkTable.c: 
+	* generic/tkTable.h: added support for building on OS X (steffen)
+
 2002-06-21  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* Makefile.in: call cygpath on INCLUDES $(srcdir)/generic.
+
+	* tests/all.tcl: minor cleanup
 
 	* tests/tkTable.test (table-30.1):
 	* generic/tkTableEdit.c (Table_EditCmd): fixed problem where row
